--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>com.study</groupId>
     <artifactId>daydayup</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>elasticsearch</module>
+        <module>flink_elasticsearch</module>
+        <module>mybatisplus-generator</module>
+    </modules>
 
     <packaging>pom</packaging>
 
@@ -28,6 +33,7 @@
         <mysql.version>5.1.47</mysql.version>
         <druid.version>1.1.16</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+        <swagger.version>2.7.0</swagger.version>
     </properties>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
