--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>security-part1</module>
         <module>acl_parent</module>
         <module>common</module>
+        <module>jdk8-character</module>
     </modules>
 
     <packaging>pom</packaging>
