--- a/elasticsearch/elasticsearch-part1/pom.xml
+++ b/elasticsearch/elasticsearch-part1/pom.xml
@@ -80,11 +80,17 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.41</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
+
+        <dependency>
+        <groupId>org.elasticsearch.client</groupId>
+        <artifactId>elasticsearch-rest-high-level-client</artifactId>
+        <version>6.8.10</version>
+        <!--<type>pom</type>-->
+    </dependency>
 
     </dependencies>
 
